--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,15 @@ body {
   padding: 0;
   background: #f7f9fa;
   color: #222;
+  background-color: #2786df;
+  background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
+
 }
 img {
   vertical-align: middle;
   border-style: none;
 }
 header {
-  background: #1e88e5;
-  color: #fff;
   padding: 1rem 2rem;
 }
 
@@ -59,12 +60,14 @@ main {
   min-height: calc(100vh - 349px);
   max-width:  var(--mainAreaWidth);
   margin: 0.5rem auto 0.5rem auto;
-  padding: 0 1rem;
+  padding: 1rem;
+  
+  margin-bottom: 2rem;
 }
 #carousel-section {
   margin-bottom: 2rem;
-  background-image: url('../images/home/bg.jpg');
-  background-repeat: no-repeat;
+  background-color: #00cc88;
+  background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png");
 }
 #carousel {
   position: relative;
@@ -183,9 +186,13 @@ main {
 /* 新版主导航和头部样式 */
 
 .main-header {
-  background: #fff;
+  /* background: #fff; */
   box-shadow: 0 2px 8px rgba(30,136,229,0.103);
   padding: 0;
+}
+
+.main-header .container{
+  /* background: #fff; */
 }
 .container {
   display: flex;
@@ -210,6 +217,7 @@ main {
   font-weight: 600;
   
   font-family: Hei, Helvetica,'微软雅黑';
+  
 }
 
 .main-nav-wrapper {
@@ -751,4 +759,8 @@ main {
     align-items: flex-start;
     gap: 0.3rem;
   }
+}
+
+* {
+  box-sizing: border-box;
 }
