--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,20 @@ body {
   font-family: 'Segoe UI', Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: #f7f9fa;
-  color: #222;
-  background-color: #2786df;
-  background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
+  /* color: #222; */
+  /* background-color: #2786df;
+  background-image: url("https://www.transparenttextures.com/patterns/cartographer.png"); */
 
+}
+.body-svg{
+  position:absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  display: block;
+  background-color: #0e4166;
+  background-image: linear-gradient(to bottom, rgba(14, 65, 102, 0.86), #0e4166);
+  z-index: -1;
 }
 img {
   vertical-align: middle;
@@ -66,8 +75,6 @@ main {
 }
 #carousel-section {
   margin-bottom: 2rem;
-  background-color: #00cc88;
-  background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png");
 }
 #carousel {
   position: relative;
@@ -172,7 +179,7 @@ main {
   }
 }
 #site-footer {
-  background: #1e88e5;
+  /* background: #1e88e5; */
   color: #fff;
   text-align: center;
   padding: 1.2rem 0 1.2rem 0;
@@ -199,7 +206,7 @@ main {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
   border-top: 1px solid #e7e3d6;
 }
 .logo-area {
@@ -242,7 +249,7 @@ main {
   transition: background 0.2s, color 0.2s;
 }
 .main-nav a.active, .main-nav a:hover {
-  background: #e3eaf2;
+  /* background: #e3eaf2; */
   color: #181818;
 }
 .main-content {
