--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,14 +65,13 @@ header .phone_lang_switch {
 #lang-switch div {
   padding: 0.3rem 0.9rem;
   border: none;
-  color: #1e88e5;
+  color: #fff;
   cursor: pointer;
   font-size: 1rem;
   line-height: 30px;
 }
 #lang-switch div.active {
-  background: #1565c0;
-  color: #fff;
+  background: #c5c5c5;
 }
 main {
   min-height: calc(100vh - 349px);
@@ -134,7 +133,7 @@ main {
 }
 #products {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 1.5rem;
 }
 .product-card {
@@ -161,18 +160,6 @@ main {
   color: #e53935;
   font-weight: bold;
   margin-bottom: 0.5rem;
-}
-.product-card .view-btn {
-  display: inline-block;
-  margin-top: 0.5rem;
-  padding: 0.3rem 1rem;
-  background: #1e88e5;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 0.95rem;
 }
 @media (max-width: 700px) {
   main {
@@ -204,7 +191,7 @@ main {
 .container {
   padding: 0.5rem 1rem;
   background-color: #f9f9f9;
-  border-top: 1px solid #e7e3d6;
+  /* border-top: 1px solid #e7e3d6; */
 }
 /* 新版主导航和头部样式 */
 
@@ -246,7 +233,7 @@ main {
   margin-right: 12px;
 }
 #site-title {
-  letter-spacing: 2px;
+  letter-spacing: -0.8px;
   font-size: 1.6rem;
   color: #000000;
   font-weight: 600;
@@ -623,7 +610,7 @@ main {
 }
 
 .product-detail-left {
-  flex: 0 0 400px;
+  flex: 0 0 180px;
   display: flex;
   align-items: flex-start;
 }
@@ -656,7 +643,7 @@ main {
 .product-info {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.5rem;
 }
 
 .product-title {
@@ -676,7 +663,6 @@ main {
   padding: 0.8rem 1rem;
   background: #f8f9fa;
   border-radius: 6px;
-  border-left: 4px solid #1e88e5;
 }
 
 .info-label {
@@ -791,7 +777,7 @@ main {
 }
 .page-title-section{
   width: 100%;
-  height: 260px;
+  height: 160px;
   background-image: url('../images/c/page_title.webp');
   background-color: #595959;
   background-size: contain;
@@ -833,6 +819,10 @@ main {
 a:visited {
   color: #666;
   box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+#lang-switch div{
+  box-shadow: inset 4px 4px 10px #bcbcbc, inset -4px -4px 10px #ffffff;
 }
 
 
