--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header .phone_lang_switch {
 .word_right .phone {
   display: grid;
   grid-row-gap: 5px;
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-left:5px;
   color: #000;
 }
@@ -46,7 +46,7 @@ header .phone_lang_switch {
 #lang-switch {
   margin-left: 1rem;
   display: flex;
-  min-width: 138px;
+  min-width: 90px;
   background: #e3eaf2;
   border: 1px solid #b6b6b6;
   border-radius: 3px;
@@ -67,8 +67,9 @@ header .phone_lang_switch {
   border: none;
   color: #fff;
   cursor: pointer;
-  font-size: 1rem;
-  line-height: 30px;
+  font-size: 0.7rem;
+  /* line-height: 30px; */
+  box-shadow: inset 4px 4px 10px #bcbcbc, inset -4px -4px 10px #ffffff;
 }
 #lang-switch div.active {
   background: #c5c5c5;
@@ -89,6 +90,14 @@ main {
 #carousel {
   position: relative;
   width: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.carousel-inner {
+  width: 100%;
+  height: 320px;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -180,7 +189,7 @@ main {
   color: #fff;
   text-align: center;
   padding: 1.2rem 0 1.2rem 0;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   margin-top: 2rem;
 }
 .footer-content > div {
@@ -238,7 +247,7 @@ main {
   color: #000000;
   font-weight: 600;
   
-  font-family: Hei, Helvetica,'微软雅黑';
+  font-family: "Arial Black", Gadget, sans-serif, Verdana;
 }
 
 .main-nav-wrapper {
@@ -821,9 +830,6 @@ a:visited {
   box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
 }
 
-#lang-switch div{
-  box-shadow: inset 4px 4px 10px #bcbcbc, inset -4px -4px 10px #ffffff;
-}
 
 
 
