--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,12 +242,17 @@ main {
   margin-right: 12px;
 }
 #site-title {
-  letter-spacing: -0.8px;
   font-size: 1.6rem;
   color: #000000;
-  font-weight: 600;
-  
+}
+.site-title-zh {
+  font-family: serif;
+  letter-spacing: 5px;
+  font-weight: 900;
+}
+.site-title-en {
   font-family: "Arial Black", Gadget, sans-serif, Verdana;
+  letter-spacing: -1.6px;
 }
 
 .main-nav-wrapper {
